<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_microphone"
            android:title="@string/menu_speakers" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_join_gdg"
            android:icon="@drawable/ic_gdg_logob"
            android:title="@string/menu_join_gdg" />
        <item
            android:id="@+id/nav_organisers"
            android:icon="@drawable/ic_organisers"
            android:title="@string/menu_organisers" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
